Exclamation mark added.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
   <div class="container">
     <div class="card-white">
-      <h1>Hi, I'm Asia 😊</h1>
+      <h1>Hi! I'm Asia 😊</h1>
       <img class="img-circle" src="images/joanna_asia_ciesla.png" alt="Asia (Joanna) Ciesla">
       <p>I'm interested in animations, design and programming.<br>I love music 🎶 and nature 🐰, especially squirrels!</p>
       <a class="btn-maroon" href="http://ciesla.asia"><strong>My portfolio</strong></a>
